# quocka

./: .gitignore  LICENSE  README.md  au2.py  badchans_2100.txt  cutout_400.py  cutout_source_finding.py  get_spec_coor.py  makebigcube.py  makecube.py  makecube_better.py  makecube_mir.py  makecube_new.py  makecube_new.py.bak  pyproject.toml  qu_fdf.py  quocka_bin_cx.py  quocka_simulate.py  quocka_simulate.py.bak  run_cal.py  run_cal.py.bak  run_chanimage.py  run_chanimage.py.bak  run_selfcal.py  selfcal_quality.py  setup.txt  source_finding_quality.py  template.cfg
Scheduling/: uptimes.py  uptimes.py.bak
quocka/: au2.py  makebigcube.py  makecube.py  qu_fdf.py  quocka_init.py  quocka_simulate.py  run_cal.py  run_selfcal.py
quocka/aux/: au2.py  cutout_400.py  cutout_source_finding.py  get_spec_coor.py  makebigcube.py  quocka_bin_cx.py  quocka_simulate.py  run_chanimage.py  selfcal_quality.py  source_finding_quality.py
quocka/core/: makecube.py  quocka_init.py  run_cal.py  run_selfcal.py
quocka/data/: setup.txt  sumss_selfcal.fits  template.cfg
quocka/scheduling/: uptimes.py
